--- a/src/css/AboutUsProjectSection.css
+++ b/src/css/AboutUsProjectSection.css
@@ -3,8 +3,10 @@
     height: 380px;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    /* margin-top: 1.7rem;
+    margin-bottom: 1.7rem; */
   }
   
   .left-column-project-section {
@@ -59,3 +61,46 @@
     border: 0.2px solid rgba(0, 0, 0, 0.2);
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
   }
+
+  @media (min-width: 1024px) and (max-width: 1440px) {
+    .my-section-project-section {
+      height: auto;
+      margin: 50px 0;
+    }
+  
+    .left-column-project-section {
+      flex: 0 0 40%;
+      text-align: center;
+      padding-right: 20px;
+      padding-bottom: 0;
+      padding-top: 0;
+    }
+  
+    .centered-text-project-section {
+      margin: 0;
+      font-size: 36px;
+      font-weight: bold;
+    }
+
+    .right-column-project-section {
+      flex: 0 0 60%;
+      padding-left: 20px;
+      padding-right: 100px;
+      padding-bottom: 0;
+      padding-top: 0;
+    }
+  
+    .right-column-project-section p {
+      font-size: 18px;
+      line-height: 1.5;
+    }
+  
+    .about-button-project-section {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
+  
