--- a/src/css/project-pages-css/ImperialRoad.css
+++ b/src/css/project-pages-css/ImperialRoad.css
@@ -26,7 +26,7 @@
   
   .image-section-imperial {
     flex-basis: 50%;
-    margin-right: 50px;
+    /* margin-right: 50px; */
   }
   
   .project-image-imperial {
@@ -38,5 +38,84 @@
 
   .image-row{
     margin-top: 2.1%;
+    gap: 50px;
   }
+
+  #para-two-imperial{
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 50px;
+  }
+  
+
+  /* Laptop size */
+
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .centered-section-imperial {
+    max-width: 94%;
+    /* height: auto; */
+  }
+
+  /* #para-two-imperial{
+    margin-right: 0;
+    margin-left: 50px;
+    padding-right: 0;
+  } */
+
+  .text-section-imperial h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .text-section-imperial span {
+    font-size: 1.05rem;
+    line-height: 1.5;
+  }
+
+  .image-section-imperial{
+    margin-right: 0;
+  }
+
+  .image-section-imperial img{
+    width: 100%;
+    /* background-size: cover; */
+  }
+}
+
+
+@media (min-width: 1200px) and (max-width: 1400px){
+  .text-section-imperial span {
+    font-size: 1.19rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1401px){
+  .text-section-imperial span {
+    font-size: 1.3rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1441px){
+  .centered-section-imperial {
+    max-width: 70%;
+    /* height: auto; */
+  }
+  .text-section-imperial span {
+    font-size: 1.08rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1690px){
+  .text-section-imperial span {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+}
+
+
   
