--- a/src/css/AboutUsContactSection.css
+++ b/src/css/AboutUsContactSection.css
@@ -34,7 +34,7 @@
     font-size: 30px;
     margin-bottom: 80px;
     font-weight: 800;
-    color: black;
+    color: rgb(0, 0, 0);
     /* color: rgb(174, 136, 54); */
   }
   
@@ -57,4 +57,48 @@
     /* color: white; */
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
   }
+
+  @media (min-width: 1024px) and (max-width: 1440px) {
+    .maindiv {
+      position: relative;
+    }
+  
+    .overlay-contact {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+  
+    .section-contact2 {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      padding: 40px;
+    }
+  
+    .section-heading {
+      font-size: 32px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+  
+    .section-description {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+  
+    .contact-button {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+  }
+  
   
