--- a/src/css/Index.css
+++ b/src/css/Index.css
@@ -72,8 +72,6 @@ header {
     text-decoration: none;
     font-weight: 700;
     font-size: 22px;
-    
-    border: 1px solid white;
     padding:10px 5px;
     border-radius: 5px;
 }
@@ -88,3 +86,91 @@ header {
 .line-divider{
     color: #c9c9c9;
 }
+
+/* header Laptop size */
+@media (min-width: 1024px) and (max-width: 1440px) {
+    header {
+      display: flex;
+      /* flex-direction: column; */
+      flex-direction: row;
+      align-items: center;
+      /* padding: 20px; */
+      /* justify-content: space-around; */
+      /* justify-content:; */
+      padding-left: 0;
+      padding-right: 0;
+      margin: 0;
+      /* padding: 0; */
+    }
+  
+    .logo-with-text {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-left: 5%;
+      /* margin-left: 0; */
+    }
+  
+    .header-logo {
+      /* display: flex;
+      flex-direction: row;
+      align-items: center; */
+      text-align: center;
+    }
+  
+    .header-logo img {
+        /* width: 100%; */
+      width: 100px;
+      height: 100px;
+      /* margin-right: 10px; */
+    }
+  
+    .gsprimo-text {
+      font-size: 18px;
+      font-weight: bold;
+    }
+  
+    .logo-texts {
+      text-align: left;
+      margin-bottom:0 ;
+    }
+
+    .logo-texts p{
+      font-size:0.75rem;
+    }
+  
+    .header-nav {
+      text-align: center;
+      margin-right: 20px;
+    }
+  
+    .header-nav a {
+      text-decoration: none;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+  }
+
+  @media (min-width: 1024px) and (max-width: 1042px){
+    .header-nav a {
+      text-decoration: none;
+      font-size: 1.1rem;
+      font-weight: bold;
+    }
+  }
+
+  @media (min-width: 1115px) and (max-width: 1440px){
+    
+    .header-nav {
+      text-align: center;
+      margin-right: 5%;
+    }
+    .header-nav a {
+      text-decoration: none;
+      font-size: 1.3rem;
+      font-weight: bold;
+    }
+  }
+
+  
