--- a/src/css/Team.css
+++ b/src/css/Team.css
@@ -41,7 +41,7 @@
     margin-right: 60px;
     padding-top: 2%;
     border-top: 2px solid black;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-style: italic;
 }
 
@@ -52,3 +52,39 @@
     box-shadow: rgba(0,0,0,0.85) 0 3px 11px 0 !important;
     height: 550px;
 }
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+    /* .main-section-team {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 40px;
+    } */
+  
+    .image-section-team {
+      flex: 1;
+      text-align: center;
+    }
+  
+    .description-section-team {
+      flex: 1;
+      /* padding-left: 40px; */
+    }
+  
+    .description-section-team h2 {
+      margin: 0;
+      font-size: 36px;
+      font-weight: bold;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+
+  
+    .description-section-team p {
+      font-size: 1.25rem;
+      line-height: 1.5;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+  }
+  
