--- a/src/css/TestSlide.css
+++ b/src/css/TestSlide.css
@@ -1,53 +1,42 @@
 
+.main-slide{
+  background-color: #f9f9f9;
+}
+
 .slide-static-card-section{
   display: grid;
-  /* grid-template-columns: repeat(2, minmax(350px, 1fr)); */
-  /* grid-template-columns: 1fr 2fr; */
   grid-template-columns: 1fr 2.5fr;
-  /* grid-gap: 1.5%; */
   margin-top: 2%;
   margin-bottom: 2%;
   height: 650px;
-  /* justify-content: end; */
   align-items: center;
   width: 100%;
   background-color: #f9f9f9;
-  padding-left: 10%;
-  padding-top: 2.5%;
-  padding-bottom: 2.5%;
-  /* background-image: url(../images/footer1.jpeg);
-  background-size: cover; */
+  /* margin-left: 100px;
+  margin-right: 100px; */
 }
 
 .slide-static-card,
 .slideshow {
-  /* border: 1px solid #ccc; */
   border-radius: 10px;
   overflow: hidden;
-  /* background-color: #AFD3E2; */
 }
 
 .static-card{
-  /* padding:55px 10px; */
   text-align: center;
   justify-content: end;
   margin-left: 40%;
   margin-right:0;
   width: 300px;
-  /* opacity: 0.5; */
 }
 
 .slide-static-card{
   background: radial-gradient(#AFD3E2,#d2d2d2);
-  /* opacity: 0.8; */
-  /* background: radial-gradient(#d2d2d2,#AFD3E2); */
   border-radius: 50%;
   height: 200px;
   width: 200px;
   text-align: center;
   transition: transform 2.5s ease;
-  /* justify-content: end; */
-  /* justify-content: end; */
 }
 
 .slide-static-card:hover{
@@ -59,7 +48,6 @@
   margin-top:40%;
   font-size: 2.1rem;
   color: #042837;
-  /* text-shadow: 2px 2px 2px rgba(0,0,0,0.5); */
 }
 
 .slideshow {
@@ -85,7 +73,6 @@
 }
 
 .slideshow-item img{
-  /* width: 750px; */
   width: 850px;
   height: 500px;
   border-radius: 5px;
@@ -98,7 +85,6 @@
   vertical-align: top;
   white-space: normal;
   width: 830px;
-  /* height: 530px; */
   height: 500px;
 }
 
@@ -109,11 +95,10 @@
 .slideshow-prev,
 .slideshow-next {
   position: absolute;
-  top: 45%;
+  top: 62%;
   transform: translateY(-50%);
   background-color: transparent;
   border: none;
-  /* color: #fff; */
   color: black;
   font-weight: 900;
   font-size: 20px;
@@ -131,4 +116,65 @@
   right: 0;
   background-color: #e1e1e1;
   opacity: 0.5;
+}
+
+/* .laptop-header{
+  display: none;
+  
+} */
+
+
+/* Laptop size */
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .main-slide{
+    padding: 0;
+  }
+
+  .slide-static-card-section {
+    display: flex;
+    flex-direction: column;
+    min-width:1024px;
+    max-width: 1440px;
+    align-items: center;
+    /* justify-content: flex-start; */
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .slide-static-card {
+    display: none;
+    width: 0;
+  }
+
+  .slideshow {
+    width: 700px;
+    /* justify-content: center; */
+    overflow: hidden;
+    /* min-width:1024px; */
+    max-width: 1440px;
+    /* margin-right: 50px; */
+    margin-left: 0;
+    padding: 0;
+  }
+
+  .slideshow-item {
+    width: 700px;
+    margin: 0;
+  }
+
+  .slideshow-item img {
+    width:700px;
+  }
+
+  .slideshow h3{
+    margin: 50px auto;
+    color: black;
+  }
+}
+
+@media (min-width:0) and (max-width:1023px){
+  .slide-static-card {
+    display: none;
+    width: 0;
+  }
 }
