--- a/src/css/project-pages-css/CliveRoad.css
+++ b/src/css/project-pages-css/CliveRoad.css
@@ -26,7 +26,7 @@
   
   .image-section-cliveroad {
     flex-basis: 50%;
-    margin-right: 50px;
+    /* margin-right: 50px; */
   }
   
   .project-image-cliveroad {
@@ -39,3 +39,79 @@
   .image-row{
     margin-top: 2.1%;
   }
+
+  #para-two-cliveroad{
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 50px;
+  }
+
+  /* Laptop size */
+
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .centered-section-cliveroad {
+    max-width: 94%;
+    /* height: auto; */
+  }
+
+  .text-section-cliveroad h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .text-section-cliveroad span {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+
+  /* #para-two-cliveroad{
+    padding-left: 50px;
+    padding-right: 0;
+    margin-right: 0;
+  } */
+
+  .image-section-cliveroad{
+    margin-right: 0;
+  }
+  .image-section-cliveroad img{
+    width: 100%;
+    /* background-size: cover; */
+  }
+}
+
+
+@media (min-width: 1200px) and (max-width: 1400px){
+  .text-section-cliveroad span {
+    font-size: 1.35rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1401px){
+  .text-section-cliveroad span {
+    font-size: 1.45rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1441px){
+  .centered-section-cliveroad {
+    max-width: 75%;
+    /* height: auto; */
+  }
+  .text-section-cliveroad span {
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1690px){
+  .text-section-cliveroad span {
+    font-size: 1.4rem;
+    line-height: 1.5;
+  }
+  
+}
+
