--- a/src/css/project-pages-css/DarcyDrive.css
+++ b/src/css/project-pages-css/DarcyDrive.css
@@ -26,7 +26,7 @@
 
 .image-section-darcy {
   flex-basis: 50%;
-  margin-right: 50px;
+  /* margin-right: 50px; */
 }
 
 .project-image-darcy {
@@ -39,3 +39,67 @@
 .image-row{
   margin-top: 2.1%;
 }
+
+/* Laptop size */
+
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .centered-section-darcy {
+    max-width: 94%;
+    /* height: auto; */
+  }
+
+  .text-section-darcy h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .text-section-darcy span {
+    font-size: 1.1rem;
+    line-height: 1.5;
+  }
+
+  .image-section-darcy{
+    margin-right:0;
+  }
+
+  .image-row{
+    max-width: 94%;
+    align-items: center;
+    gap: 30px;
+  }
+}
+
+
+@media (min-width: 1200px) and (max-width: 1400px){
+  .text-section-darcy span {
+    font-size: 1.19rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1401px){
+  .text-section-darcy span {
+    font-size: 1.3rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1441px){
+  .centered-section-darcy {
+    max-width: 70%;
+  }
+  .text-section-darcy span {
+    font-size: 1.08rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1690px){
+  .text-section-darcy span {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+}
+
