--- a/src/css/project-pages-css/TownshipAldborough.css
+++ b/src/css/project-pages-css/TownshipAldborough.css
@@ -26,7 +26,7 @@
   
   .image-section-township {
     flex-basis: 50%;
-    margin-right: 50px;
+    /* margin-right: 50px; */
   }
   
   .project-image-township {
@@ -39,4 +39,85 @@
 
   .image-row{
     margin-top: 2.1%;
+    gap: 50px;
   }
+
+  #para-two-township{
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 50px;
+  }
+
+  /* Laptop size */
+
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .centered-section-township {
+    max-width: 94%;
+    /* height: auto; */
+  }
+
+  .text-section-township h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .text-section-township span {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+
+  .image-section-township{
+    margin-right: 0;
+  }
+
+  /* #para-two-township{
+    margin-left: 30px;
+    padding-right: 0;
+    margin-right: 0;
+  } */
+
+  .image-section-township img{
+    width: 100%;
+    /* background-size: cover; */
+  }
+}
+
+
+@media (min-width: 1200px) and (max-width: 1400px){
+  .text-section-township span {
+    font-size: 1.3rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1401px){
+  .text-section-township span {
+    font-size: 1.3rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1441px){
+  .centered-section-township {
+    max-width: 75%;
+    /* height: auto; */
+  }
+  .text-section-township span {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1690px){
+  .centered-section-township {
+    max-width: 70%;
+    /* height: auto; */
+  }
+  .text-section-township span {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+}
+
