--- a/src/css/project-pages-css/WaterlooStreet.css
+++ b/src/css/project-pages-css/WaterlooStreet.css
@@ -26,7 +26,7 @@
   
   .image-section-waterloostreet {
     flex-basis: 50%;
-    margin-right: 50px;
+    /* margin-right: 50px; */
   }
   
   .project-image-waterloostreet {
@@ -40,3 +40,65 @@
   .image-row{
     margin-top: 2.1%;
   }
+
+  /* Laptop size */
+
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .centered-section-waterloostreet {
+    max-width: 94%;
+    /* height: auto; */
+  }
+
+  .text-section-waterloostreet h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .text-section-waterloostreet span {
+    font-size: 1.1rem;
+    line-height: 1.5;
+  }
+  .image-section-waterloostreet{
+    margin-right: 0;
+  }
+  .image-section-waterloostreet img{
+    width: 100%;
+    /* background-size: cover; */
+  }
+}
+
+
+@media (min-width: 1200px) and (max-width: 1400px){
+  .text-section-waterloostreet span {
+    font-size: 1.19rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1401px){
+  .text-section-waterloostreet span {
+    font-size: 1.3rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1441px){
+  .centered-section-waterloostreet {
+    max-width: 75%;
+    /* height: auto; */
+  }
+  .text-section-waterloostreet span {
+    font-size: 1.12rem;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1690px){
+  .text-section-waterloostreet span {
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
+}
+
